<resources>
    <string name="app_name">calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="multiply">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="ans">ANS</string>
    <string name="clear">Clear</string>
    <string name="_0">0</string>
    <string name="output">output</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="open_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="dot">.</string>
    <string name="answer">=</string>
    <string name="del"><![CDATA[<-]]></string>
    <string name="sqrt">sqrt</string>
    <string name="space">space</string>
</resources>