<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D2D0D0">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#98A897"
            android:layout_marginBottom="100dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_1"
                android:text="@string/_1"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_2"
                android:text="@string/_2"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_3"
                android:text="@string/_3"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_plus"
                android:text="@string/plus"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="90dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_4"
                android:text="@string/_4"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_5"
                android:text="@string/_5"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_6"
                android:text="@string/_6"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_minus"
                android:text="@string/minus"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="90dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:text="@string/_7"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_8"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:text="@string/_8"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">

            </Button>

            <Button
                android:id="@+id/btn_9"
                android:text="@string/_9"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_multiply"
                android:text="@string/multiply"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="90dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_0"
                android:text="@string/_0"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle"
                >
            </Button>

            <Button
                android:id="@+id/btn_clear"
                android:text="@string/c"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_ans"
                android:text="@string/answer"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/btn_divide"
                android:text="@string/divide"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="90dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/open_bracket"
                android:text="@string/open_bracket"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle"
                >
            </Button>

            <Button
                android:id="@+id/closed_bracket"
                android:text="@string/closed_bracket"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/dot"
                android:text="@string/dot"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="70dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/del"
                android:text="@string/del"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:layout_width="90dp"
                android:layout_height="60dp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/square_root"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:text="@string/sqrt"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/space"
                android:layout_width="170dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:text="@string/space"
                android:textSize="20sp"
                app:cornerRadius="15dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>